# arbiter

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  arbiter.md  pyproject.toml  requirements.txt
backend/agents/: base_agent.py  toy_agents.py
backend/verifier/: bus.py  hlc.py  verifier_service.py
backend/verifier/anomaly/: dependency_graph.py  dependency_graph_impl.py
backend/verifier/capability/: capability_store.py  tokens.py  tool_boundary.py
backend/verifier/decompose/: local_checker.py
backend/verifier/lease/: __init__.py  fencing.py  lease_manager.py  protected_resource_impl.py
backend/verifier/spec/: __init__.py  state_machine.py  state_machine_engine.py  task_ownership_spec.py
backend/verifier/transports/: __init__.py  blackboard_sim.py  grpc_sim.py  queue_sim.py  stdout_sim.py  webhook_sim.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DependencyGraph.jsx  EventFeed.jsx  Header.jsx  LandingPage.jsx  ResultsPanel.jsx  StateMachines.jsx  Violations.jsx
frontend/src/hooks/: useArbiterSocket.js  useRunner.js  useTheme.js
scripts/: __init__.py  restructure.sh  run_demo.py  setup_and_test.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  toy_agents.py
src/dashboard/: app.js  index.html  styles.css
src/verifier/: __init__.py  bus.py  events.py  hlc.py  verifier_service.py
src/verifier/anomaly/: __init__.py  (+3 more)
tests/: test_cycle_detector.py  test_demo_e2e.py  test_fencing.py  test_hlc.py  test_placeholder.py  test_state_machine.py
(+17 files in other folders)
